# nommy

./: .gitignore  404.html  Cargo.toml  README.md  basic.html  buffers.html  configuration.html  derive.html  enum.html  field-attr.html  ideology.html  index.html  nommy.html  parsers.html  peekers.html  print.html  searchindex.js  searchindex.json  struct.html  type-attr.html
.github/workflows/: gh-pages.yml
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  basic.md  buffers.md  configuration.md  derive.md  enum.md  field-attr.md  ideology.md  nommy.md  parsers.md  peekers.md  struct.md  type-attr.md
nommy/: Cargo.toml
nommy-derive/: Cargo.toml
nommy-derive/src/: attr.rs  enum_impl.rs  fn_impl.rs  lib.rs  named_struct.rs  parsers.rs  tuple_struct.rs  ty.rs  util.rs
nommy-derive/src/enum_impl/: mod.rs  named.rs  unit.rs  unnamed.rs
nommy-derive/src/struct_impl/: mod.rs  named.rs  unit.rs  unnamed.rs
nommy-tests/: Cargo.toml
nommy-tests/tests/: enum.rs  http.rs  json.rs  lisp.rs  mega.rs  multiple.rs  single.rs  test.rs  xml.rs
nommy/src/: buffer.rs  impls.rs  lib.rs  surrounded.rs  token.rs  tuple.rs  vec.rs
nommy/src/bytes/: any_of.rs  many.rs  mod.rs  one_of.rs  tag.rs
nommy/src/text/: any_of.rs  many.rs  mod.rs  one_of.rs  tag.rs  token.rs
src/: lib.rs  token.rs  tuple.rs
