[package]
name = "nommy_derive"
version = "0.4.1"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"
description = "derive(Parse)"
license = "MIT"
repository = "https://github.com/conradludgate/nommy"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
