[package]
name = "nommy"
version = "0.3.2"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"
description = "Type based parser"
license = "MIT"
repository = "https://github.com/conradludgate/nommy"
readme = "../README.md"

[dependencies]
nommy_derive = { path = "../nommy-derive", version = "=0.3.0" }
eyre = "0.6"
